crates/gateway/clean_gateway.txt
cargo : warning: 
profiles for the non 
root package will be 
ignored, specify 
profiles at the 
workspace root:
At line:1 char:21
+ cd crates/gateway ; 
cargo check > 
cargo_gateway.log 2>&1
+                     ~
~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (warning: prof   
 il...workspace roo    
t::String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
package:   S:\neurostor
e-next\neurostore-next\
crates\node\Cargo.toml
workspace: S:\neurostor
e-next\neurostore-next\
Cargo.toml
    Checking 
asynchronous-codec 
v0.6.2
   Compiling 
crossbeam-utils v0.8.21
   Compiling getrandom 
v0.4.1
    Checking 
concurrent-queue v2.5.0
    Checking parking 
v2.2.1
    Checking 
crossbeam-queue v0.3.12
   Compiling 
portable-atomic v1.13.1
    Checking 
crossbeam-channel 
v0.5.15
    Checking tagptr 
v0.2.0
    Checking 
event-listener v5.4.1
    Checking 
unsigned-varint v0.7.2
    Checking 
multistream-select 
v0.13.0
    Checking 
quick-protobuf-codec 
v0.2.0
    Checking event-list
ener-strategy v0.5.4
   Compiling sqlx-core 
v0.7.4
    Checking 
async-lock v3.4.2
    Checking 
libp2p-core v0.41.3
    Checking 
libp2p-swarm v0.44.2
    Checking 
libp2p-dns v0.41.1
    Checking 
libp2p-yamux v0.45.2
    Checking 
libp2p-noise v0.44.0
    Checking 
libp2p-websocket 
v0.43.2
    Checking 
libp2p-tcp v0.41.0
    Checking uuid 
v1.21.0
    Checking moka 
v0.12.13
    Checking libp2p-req
uest-response v0.26.3
    Checking 
libp2p-kad v0.45.3
    Checking libp2p-all
ow-block-list v0.3.0
    Checking 
libp2p-identify v0.44.2
    Checking 
libp2p-relay v0.17.2
    Checking libp2p-con
nection-limits v0.3.1
    Checking 
libp2p-autonat v0.12.0
    Checking 
sqlx-postgres v0.7.4
    Checking libp2p 
v0.53.2
   Compiling 
sqlx-macros-core v0.7.4
   Compiling 
sqlx-macros v0.7.4
    Checking sqlx 
v0.7.4
    Checking 
neurostore-gateway 
v0.3.0 (S:\neurostore-n
ext\neurostore-next\cra
tes\gateway)
error: set 
`DATABASE_URL` to use 
query macros online, 
or run `cargo sqlx 
prepare` to update the 
query cache
  --> crates\gateway\sr
c\repair.rs:33:36
   |
33 |           let 
degraded_objects_res = 
sqlx::query!(
   |  _________________
___________________^
34 | |             r#"
35 | |             
SELECT bucket, key, 
cid, shards, 
recovery_threshold 
36 | |             
FROM objects 
37 | |             
WHERE shards < 15 AND 
shards >= 
recovery_threshold
38 | |             "#
39 | |         )
   | |_________^
   |
   = note: this error 
originates in the 
macro `$crate::sqlx_mac
ros::expand_query` 
which comes from the 
expansion of the macro 
`sqlx::query` (in 
Nightly builds, run 
with -Z 
macro-backtrace for 
more info)

error: set 
`DATABASE_URL` to use 
query macros online, 
or run `cargo sqlx 
prepare` to update the 
query cache
  --> crates\gateway\sr
c\repair.rs:62:38
   |
62 |                   
    let update_res = 
sqlx::query!(
   |  _________________
_____________________^
63 | |                 
        "UPDATE 
objects SET shards = 
15 WHERE bucket = $1 
AND key = $2",
64 | |                 
        obj.bucket, 
obj.key
65 | |                 
    )
   | 
|_____________________^
   |
   = note: this error 
originates in the 
macro `$crate::sqlx_mac
ros::expand_query` 
which comes from the 
expansion of the macro 
`sqlx::query` (in 
Nightly builds, run 
with -Z 
macro-backtrace for 
more info)

error[E0433]: failed 
to resolve: could not 
find `server` in 
`relay`
  --> crates\gateway\sr
c\p2p.rs:84:23
   |
84 |     pub relay: rel
ay::server::Behaviour,
   |                   
    ^^^^^^ could not 
find `server` in 
`relay`

error[E0433]: failed 
to resolve: could not 
find `server` in 
`relay`
   --> crates\gateway\s
rc\p2p.rs:121:36
    |
121 |                 
let relay = relay::serv
er::Behaviour::new(rela
y::server::Config::defa
ult());
    |                  
                  
^^^^^^ could not find 
`server` in `relay`
    |
help: consider 
importing one of these 
structs
    |
  1 + use crate::p2p::a
utonat::Behaviour;
    |
  1 + use crate::p2p::r
elay::Behaviour;
    |
  1 + use crate::p2p::r
elay::client::Behaviour
;
    |
  1 + use crate::p2p::r
equest_response::Behavi
our;
    |
help: if you import 
`Behaviour`, refer to 
it directly
    |
121 -                 
let relay = relay::serv
er::Behaviour::new(rela
y::server::Config::defa
ult());
121 +                 
let relay = Behaviour::
new(relay::server::Conf
ig::default());
    |

error[E0433]: failed 
to resolve: could not 
find `server` in 
`relay`
   --> crates\gateway\s
rc\p2p.rs:121:66
    |
121 |                 
let relay = relay::serv
er::Behaviour::new(rela
y::server::Config::defa
ult());
    |                  
                       
                       
  ^^^^^^ could not 
find `server` in 
`relay`
    |
help: consider 
importing one of these 
items
    |
  1 + use crate::p2p::a
utonat::Config;
    |
  1 + use crate::p2p::n
oise::Config;
    |
  1 + use crate::p2p::r
elay::Config;
    |
  1 + use crate::p2p::r
equest_response::Config
;
    |
    = and 4 other 
candidates
help: if you import 
`Config`, refer to it 
directly
    |
121 -                 
let relay = relay::serv
er::Behaviour::new(rela
y::server::Config::defa
ult());
121 +                 
let relay = relay::serv
er::Behaviour::new(Conf
ig::default());
    |

warning: unused 
import: `delete`
 --> crates\gateway\src
\main.rs:2:31
  |
2 |     routing::{get, 
post, put, delete},
  |                    
           ^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: `Context`
 --> crates\gateway\src
\erasure.rs:2:22
  |
2 | use 
anyhow::{Result, 
Context};
  |                    
  ^^^^^^^

warning: unused 
import: `Event as 
RequestResponseEvent`
 --> crates\gateway\src
\p2p.rs:4:91
  |
4 |     request_respons
e::{self, Behaviour as 
RequestResponse, Codec 
as 
RequestResponseCodec, 
Event as 
RequestResponseEvent},
  |                    
                       
                       
                       
  ^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^

warning: unused 
import: 
`std::time::Duration`
 --> crates\gateway\src
\p2p.rs:9:5
  |
9 | use 
std::time::Duration;
  |     
^^^^^^^^^^^^^^^^^^^

error[E0599]: no 
method named `decode` 
found for struct 
`GeneralPurpose` in 
the current scope
   --> crates\gateway\s
rc\handlers\zk.rs:46:77
    |
 46 |         let 
decoded_bytes = match b
ase64::engine::general_
purpose::STANDARD.decod
e(&shard.bytes) {
    |                  
                       
                       
             ^^^^^^
    |
   ::: C:\Users\Janyshh
\.cargo\registry\src\in
dex.crates.io-1949cf8c6
b5b557f\base64-0.22.1\s
rc\engine\mod.rs:244:8
    |
244 |     fn decode<T: 
AsRef<[u8]>>(&self, 
input: T) -> 
Result<Vec<u8>, 
DecodeError> {
    |        ------ 
the method is 
available for 
`GeneralPurpose` here
    |
    = help: items from 
traits can only be 
used if the trait is 
in scope
help: there is a 
method `decode_vec` 
with a similar name, 
but with different 
arguments
   --> C:\Users\Janyshh
\.cargo\registry\src\in
dex.crates.io-1949cf8c6
b5b557f\base64-0.22.1\s
rc\engine\mod.rs:302:5
    |
302 | /     fn 
decode_vec<T: 
AsRef<[u8]>>(
303 | |         &self,
304 | |         input: 
T,
305 | |         
buffer: &mut Vec<u8>,
306 | |     ) -> 
Result<(), 
DecodeError> {
    | |________________
________________^
help: trait `Engine` 
which provides 
`decode` is 
implemented but not in 
scope; perhaps you 
want to import it
    |
  1 + use 
base64::Engine;
    |

error[E0282]: type 
annotations needed
  --> crates\gateway\sr
c\handlers\zk.rs:46:13
   |
46 |         let 
decoded_bytes = match b
ase64::engine::general_
purpose::STANDARD.decod
e(&shard.bytes) {
   |             
^^^^^^^^^^^^^
...
57 |         state.edge
_cache.insert(shard.cid
.clone(), axum::body::B
ytes::from(decoded_byte
s.clone())).await;
   |                   
                       
                       
           
------------- type 
must be known at this 
point
   |
help: consider giving 
`decoded_bytes` an 
explicit type
   |
46 |         let 
decoded_bytes: /* Type 
*/ = match base64::engi
ne::general_purpose::ST
ANDARD.decode(&shard.by
tes) {
   |                   
       ++++++++++++

error[E0282]: type 
annotations needed for 
`Result<_, _>`
  --> crates\gateway\sr
c\repair.rs:33:13
   |
33 |         let 
degraded_objects_res = 
sqlx::query!(
   |             
^^^^^^^^^^^^^^^^^^^^
...
45 |                 
if objects.is_empty() {
   |                   
 ------- type must be 
known at this point
   |
help: consider giving 
`degraded_objects_res` 
an explicit type, 
where the placeholders 
`_` are specified
   |
33 |         let 
degraded_objects_res: 
Result<_, E> = 
sqlx::query!(
   |                   
              
++++++++++++++

Some errors have 
detailed explanations: 
E0282, E0433, E0599.
For more information 
about an error, try 
`rustc --explain 
E0282`.
warning: 
`neurostore-gateway` 
(bin 
"neurostore-gateway") 
generated 4 warnings
error: could not 
compile 
`neurostore-gateway` 
(bin 
"neurostore-gateway") 
due to 8 previous 
errors; 4 warnings 
emitted
